<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.homemortgageinterestapp.MainActivity" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txtTitle"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/numMonthlyPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ems="8"
        android:hint="@string/hint1"
        android:inputType="numberDecimal" >
        
    </EditText>

    <EditText
        android:id="@+id/numYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numMonthlyPayment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:ems="8"
        android:hint="@string/hint2"
        android:inputType="number" />

    <EditText
        android:id="@+id/numInterestPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numYears"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="8"
        android:hint="@string/hint3"
        android:inputType="number" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numInterestPaid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/btnCompute"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imgMortgage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:contentDescription="@string/imgDescription"
        android:layout_below="@+id/btnCompute"
        android:src="@drawable/mortgage" />

</RelativeLayout>
